angular-rails & angular-route with Bower

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,3 +12,9 @@
     </div>
   </div>
 </div>
+
+<div ng-app="receta">
+  <div class="view-container">
+    <div ng-view class="view-frame animate-view"></div>
+  </div>
+</div>
